# TileDB-Java

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  azure-pipelines.yml  build.gradle  generate_tiledb_jni  gradle.properties  gradlew  settings.gradle
.github/: dependabot.yml
.github/workflows/: github_actions.yml  nightly.yml
ci/: Dockerfile2010  assemble_full_jar.sh  build.sh  tiledb-java-azure.yml  tiledb-java-final-jar.yml  tiledb-java-linux_osx-release.yml  tiledb-java-linux_osx.yml  tiledb-java-windows-release.yml  upload_to_maven.sh
cmake/: TileDB-JNI-Superbuild.cmake
cmake/Modules/: FindLIBJVM.cmake  FindTILEDB.cmake  FindTileDB_EP.cmake
docker/: dockcross-linux-arm64  dockcross-linux-armv6  dockcross-linux-armv7  dockcross-linux-x86  dockcross-windows-x64
docker/windows/: Dockerfile  README.md  VersionPrinter.java
docs/: building-from-source.md
gradle/wrapper/: gradle-wrapper.properties
java-api/: CMakeLists.txt  GenerateJNI.md  build.gradle  generate_tiledb_jni
java-api/cmake/Modules/: FindTILEDB.cmake  FindTileDB_EP.cmake
java-api/src/main/c/custom/: tiledb_custom.cxx  tiledb_wrap_custom.cxx
java-api/src/main/java/io/tiledb/libtiledb/: Callback.java  PathCallback.java  SWIGTYPE_p_float32_t.java  SWIGTYPE_p_float64_t.java  SWIGTYPE_p_p_char.java  SWIGTYPE_p_p_tiledb_array_t.java  SWIGTYPE_p_p_tiledb_kv_iter_t.java  SWIGTYPE_p_p_tiledb_kv_t.java  SWIGTYPE_p_std__mapT_std__string_std__string_t__iterator.java  SWIGTYPE_p_std__mutex.java  SWIGTYPE_p_std__string.java  SWIGTYPE_p_stdout.java  SWIGTYPE_p_tiledb__ArraySchema.java  SWIGTYPE_p_tiledb__Attribute.java  (+27 more)
java-api/swig/: tiledb.h  tiledb.i  tiledb_java_extensions.h
java-api/swig/customCode/: PathCallback.java  PointerUtils.java  Utils.java  UtilsJNI.java
spark/: build.gradle
src/main/c/: README.md
src/main/c/custom/: tiledb_custom.cxx  tiledb_wrap_custom.cxx
src/main/java/examples/: TiledbArrayConsolidate.java  TiledbArraySchema.java  TiledbDenseCreate.java  TiledbDenseReadAsync.java  TiledbDenseReadGlobal.java  TiledbDenseReadOrderedSubarray.java  TiledbDenseReadSubsetIncomplete.java  TiledbDenseWriteAsync.java  TiledbDenseWriteGlobal1.java  TiledbDenseWriteGlobal2.java  TiledbDenseWriteGlobalSubarray.java  TiledbDenseWriteOrderedSubarray.java  TiledbDenseWriteUnordered.java  TiledbError.java  TiledbGroupCreate.java  TiledbKVCreate.java  TiledbKVRead.java  TiledbKVWrite.java  TiledbObjectLsWalk.java  TiledbObjectMove.java  TiledbObjectRemove.java  TiledbObjectType.java  TiledbSparseCreate.java  TiledbSparseReadGlobal.java  TiledbSparseReadOrderedSubarray.java  TiledbSparseReadSubsetIncomplete.java  TiledbSparseWriteGlobal1.java  TiledbSparseWriteGlobal2.java  TiledbSparseWriteUnordered1.java  TiledbSparseWriteUnordered1Again.java  TiledbSparseWriteUnordered2.java  TiledbVersion.java
src/main/java/io/tiledb/api/: Callback.java  PathCallback.java  PointerUtils.java  SWIGTYPE_p_FILE.java  SWIGTYPE_p_double.java  SWIGTYPE_p_f_p_q_const__char_enum_tiledb_object_t_p_void__int.java  SWIGTYPE_p_f_p_void__void.java  SWIGTYPE_p_float.java  SWIGTYPE_p_float32_t.java  SWIGTYPE_p_float64_t.java  SWIGTYPE_p_int.java  SWIGTYPE_p_long_long.java  SWIGTYPE_p_p_char.java  SWIGTYPE_p_p_int.java  SWIGTYPE_p_p_tiledb_array_schema_t.java  SWIGTYPE_p_p_tiledb_attribute_t.java  SWIGTYPE_p_p_tiledb_config_iter_t.java  SWIGTYPE_p_p_tiledb_config_t.java  SWIGTYPE_p_p_tiledb_ctx_t.java  SWIGTYPE_p_p_tiledb_dimension_t.java  SWIGTYPE_p_p_tiledb_domain_t.java  SWIGTYPE_p_p_tiledb_error_t.java  SWIGTYPE_p_p_tiledb_kv_item_t.java  SWIGTYPE_p_p_tiledb_kv_iter_t.java  SWIGTYPE_p_p_tiledb_kv_schema_t.java  SWIGTYPE_p_p_tiledb_kv_t.java  SWIGTYPE_p_p_tiledb_query_t.java  SWIGTYPE_p_p_tiledb_vfs_fh_t.java  SWIGTYPE_p_p_tiledb_vfs_t.java  SWIGTYPE_p_p_void.java  SWIGTYPE_p_short.java  SWIGTYPE_p_signed_char.java  SWIGTYPE_p_std__mapT_std__string_std__string_t.java  SWIGTYPE_p_std__mapT_std__string_std__string_t__iterator.java  SWIGTYPE_p_std__mutex.java  SWIGTYPE_p_std__out.java  SWIGTYPE_p_std__string.java  SWIGTYPE_p_stdout.java  SWIGTYPE_p_tiledb__ArraySchema.java  SWIGTYPE_p_tiledb__Attribute.java  (+71 more)
src/main/java/io/tiledb/libtiledb/: Callback.java  NativeLibLoader.java  PathCallback.java  PointerUtils.java  README.md  SWIGTYPE_p_FILE.java  SWIGTYPE_p_double.java  SWIGTYPE_p_f_p_q_const__char_enum_tiledb_object_t_p_void__int.java  SWIGTYPE_p_f_p_q_const__char_p_void__int.java  SWIGTYPE_p_f_p_q_const__char_unsigned_long_unsigned_long_long_p_void__int.java  SWIGTYPE_p_f_p_q_const__char_unsigned_long_unsigned_long_long_unsigned_char_p_void__int.java  SWIGTYPE_p_f_p_void__void.java  SWIGTYPE_p_float.java  SWIGTYPE_p_int.java  SWIGTYPE_p_long_long.java  SWIGTYPE_p_p_capi_return_t.java  SWIGTYPE_p_p_char.java  SWIGTYPE_p_p_int.java  SWIGTYPE_p_p_p_void.java  SWIGTYPE_p_p_tiledb_array_handle_t.java  SWIGTYPE_p_p_tiledb_array_schema_evolution_t.java  SWIGTYPE_p_p_tiledb_array_schema_t.java  SWIGTYPE_p_p_tiledb_array_t.java  SWIGTYPE_p_p_tiledb_attribute_t.java  SWIGTYPE_p_p_tiledb_buffer_handle_t.java  SWIGTYPE_p_p_tiledb_buffer_list_handle_t.java  SWIGTYPE_p_p_tiledb_buffer_list_t.java  SWIGTYPE_p_p_tiledb_buffer_t.java  SWIGTYPE_p_p_tiledb_channel_operation_t.java  SWIGTYPE_p_p_tiledb_channel_operator_t.java  SWIGTYPE_p_p_tiledb_config_iter_handle_t.java  SWIGTYPE_p_p_tiledb_config_iter_t.java  SWIGTYPE_p_p_tiledb_config_t.java  SWIGTYPE_p_p_tiledb_consolidation_plan_t.java  SWIGTYPE_p_p_tiledb_ctx_t.java  SWIGTYPE_p_p_tiledb_current_domain_handle_t.java  SWIGTYPE_p_p_tiledb_current_domain_t.java  SWIGTYPE_p_p_tiledb_dimension_label_handle_t.java  SWIGTYPE_p_p_tiledb_dimension_t.java  SWIGTYPE_p_p_tiledb_domain_t.java  (+173 more)
src/test/java/io/tiledb/jni/: ArrayTest.java
src/test/resources/data/: text.txt
src/test/resources/data/1.6/quickstart_sparse_array/: __array_schema.tdb
swig/: README.md  tiledb.h  tiledb.i  tiledb_generated.h  tiledb_java_extensions.h
swig/customCode/: Callback.java  NativeLibLoader.java  PathCallback.java  PointerUtils.java  Utils.java  UtilsJNI.java
(+325 files in other folders)
